User manage question

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,3 +18,15 @@ en:
   create_category_complete: "Create category complete"
   delete_category_complete: "Delete category complete"
   category_updated: "Category updated"
+  suggested_question: "Suggested question"
+  new_question: "New question"
+  create_question: "Create question"
+  must_be_option_correct: "Must be option correct"
+  update_question: "Update question"
+  delete_question: "Delete question"
+  create_question_complete: "Create question complete"
+  create_question_fail: "Create question fail"
+  update_question_complete: "Update question complete"
+  update_question_fail: "Update question fail"
+  destroy_question_complete: "Destroy question complete"
+  destroy_question_fail: "Destroy question fail"
