--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,9 @@ en:
   destroy_question_complete: "Destroy question complete"
   destroy_question_fail: "Destroy question fail"
   active: "Active"
+  create_exam: "Create exam"
+  submit: "Submit"
+  finish: "Finish"
+  update_exam_complete: "Update exam complete"
+  create_exam_complete: "Create exam complete"
+  you_need_complete_exam: "You nead complete exam"
