--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,8 @@ en:
   categories_page: "Categories page"
   create_category: "Create category"
   update_category: "Update category"
+  category_updated: "Category updated"
+  categories_empty: "Categories empty"
   create_category_complete: "Create category complete"
   delete_category_complete: "Delete category complete"
   suggested_question: "Suggested question"
@@ -40,3 +42,36 @@ en:
   question_actived: "Question actived"
   questions_of: "Questions of"
   empty: "empty"
+  sign_in: "Sign in"
+  corporate_identity_planner: "Corporate Identity Planner"
+  setting: "Setting"
+  signout: "Signout"
+  update_user: "Update user"
+  correct: "Correct"
+  actived: "Actived"
+  start: "Start"
+  show: "Show"
+  edit: "Edit"
+  contribute_questions: "Contribute questions"
+  manage: "Manage"
+  categories: "Categories"
+  questions:  "Questions"
+  exams: "Exams"
+  stt: "Stt"
+  view: "View"
+  name: "Name"
+  description: "Description"
+  time_limit: "Time limit"
+  action: "Action"
+  minutes: "Minutes"
+  create_date: "Create Date"
+  subject: "Subject"
+  status: "Status"
+  duration: "Duration"
+  question_number: "Question Number"
+  spent_time: "Spent Time"
+  scope: "Scope"
+  user: "User"
+  question: "Question"
+  state: "State"
+  examination_list: "Examination List"
