--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,8 @@ en:
   categories_page: "Categories page"
   create_category: "Create category"
   update_category: "Update category"
+  category_updated: "Category updated"
+  categories_empty: "Categories empty"
   create_category_complete: "Create category complete"
   delete_category_complete: "Delete category complete"
   suggested_question: "Suggested question"
@@ -41,3 +43,4 @@ en:
   questions_of: "Questions of"
   empty: "empty"
   sign_in: "Sign in"
+  corporate_identity_planner: "Corporate Identity Planner"
